[fix] 修正訂單完成頁z-index

--- a/assets/scss/custom/_cart-completed.scss
+++ b/assets/scss/custom/_cart-completed.scss
@@ -8,7 +8,7 @@
     min-height: calc(100vh - 42rem);
     padding-top: 8.2rem;
     padding-bottom: 10.6rem;
-    z-index: 99;
+    z-index: 1;
 
     @include media-breakpoint-down(medium) {
         padding-top: 8.8rem;
